# github-workflows-containers

./: .gitignore  README.md
.github/workflows/: docker-image.yml  push-ghcr.yml
dockerdir/: Dockerfile  entrypoint.sh
docs/: code_doc.md
github-workflows-containers/: pyproject.toml
github-workflows-containers/src/github_workflows_containers/: api.py  app.py
